@@ -23,6 +23,8 @@ import com.percussion.design.objectstore.PSTextLiteral;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.Calendar;
+import java.util.Objects;
+import java.util.Optional;
 
 /**
  * The PSCalculation class performs basic mathematical operation and computation
@@ -34,9 +36,16 @@ import java.util.Calendar;
  * @author     Jian Huang
  * @version    2.0
  * @since      1.0
+ * @deprecated Consider using BigDecimal and modern Java math libraries for new code
  */
-public class PSCalculation
+@Deprecated(since = "Java 11 refactoring", forRemoval = false)
+public final class PSCalculation
 {
+   // Private constructor to prevent instantiation
+   private PSCalculation() {
+      throw new UnsupportedOperationException("Utility class cannot be instantiated");
+   }
+
    /**
     * Make sure the input object is really a number related object. The returned
     * object is either java.lang.Number or one of its subclasses. This method
@@ -46,44 +55,42 @@ public class PSCalculation
     *
     * @return     either java.lang.Number or one of its subclasses' object
     *
+    * @throws IllegalArgumentException if the object cannot be converted to a number
     */
-   public static Object numberVerify(Object o)
+   public static Number numberVerify(Object o)
    {
-      if (o == null){
-         Object[] args = { "null is not a number object", "numberVerify" };
+      if (o == null) {
          throw new IllegalArgumentException("numberVerify exception: null is not a number object");
       }
 
-      if ((o instanceof Number) || (o instanceof BigDecimal) || (o instanceof BigInteger) ||
-         (o instanceof Byte) || (o instanceof Double) || (o instanceof Float) ||
-         (o instanceof Integer) || (o instanceof Long) || (o instanceof Short) ){
-         return o;
+      // Check if it's already a Number (BigDecimal and BigInteger are subclasses of Number)
+      if (o instanceof Number) {
+         return (Number) o;
       }
 
-      if (o instanceof String){
-         try{
-            return new Double((String)o);
-         } catch (NumberFormatException e){
-            throw new IllegalArgumentException("NumberFormatException: numberVerify exception");
+      if (o instanceof String) {
+         try {
+            return Double.valueOf((String) o);
+         } catch (NumberFormatException e) {
+            throw new IllegalArgumentException("NumberFormatException: numberVerify exception - cannot parse string: " + o, e);
          }
       }
 
-      if (o instanceof PSNumericLiteral){
-         BigDecimal num = ((PSNumericLiteral)o).getNumber();
-         return num;
+      if (o instanceof PSNumericLiteral) {
+         return ((PSNumericLiteral) o).getNumber();
       }
 
-      if (o instanceof PSTextLiteral){
-         String text = ((PSTextLiteral)o).getText();
-         try{
-            return new Double(text);
-         } catch (NumberFormatException e){
-            throw new IllegalArgumentException("NumberFormatException: numberVerify exception");
+      if (o instanceof PSTextLiteral) {
+         var text = ((PSTextLiteral) o).getText();
+         try {
+            return Double.valueOf(text);
+         } catch (NumberFormatException e) {
+            throw new IllegalArgumentException("NumberFormatException: numberVerify exception - cannot parse PSTextLiteral: " + text, e);
          }
       }
 
       // The rest of data types are not numbers, even Date and Boolean
-      throw new IllegalArgumentException("numberVerify exception: input is not a number related object");
+      throw new IllegalArgumentException("numberVerify exception: input is not a number related object: " + o.getClass().getSimpleName());
    }
 
    /**
@@ -93,33 +100,14 @@ public class PSCalculation
     * a IllegalArgumentException will be thrown. Note: calling numberVerify method
     * in advance is not needed, add method does it automatically.
     *
+    * @param o1 first operand
+    * @param o2 second operand
     * @return     the sum which is a number related object, or null
     *             if both Obj1 and Obj2 are null
     */
-   public static Object add(Object o1, Object o2)
+   public static Double add(Object o1, Object o2)
    {
-      if ((o1 == null) && (o2 == null))
-         return null;
-
-      // We do not allow null being used as zero
-      if ((o1 == null) || (o2 == null)){
-         throw new IllegalArgumentException("PSCalculation/add exception: null parameter(s)");
-      }
-
-      try{
-         o1 = numberVerify(o1);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/add exception: The first parameter is not a number");
-      }
-
-      try{
-         o2 = numberVerify(o2);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/add exception: The second parameter is not a number");
-      }
-
-      double result = ((Number)o1).doubleValue() + ((Number)o2).doubleValue();
-      return new Double(result);
+      return performBinaryOperation(o1, o2, Double::sum, "add");
    }
 
    /**
@@ -129,32 +117,14 @@ public class PSCalculation
     * then a IllegalArgumentException will be thrown. Note: calling numberVerify method
     * in advance is not needed, subtract method does it automatically.
     *
+    * @param o1 first operand
+    * @param o2 second operand
     * @return     the difference which is a number related object, or null
     *             if both Obj1 and Obj2 are null
     */
-   public static Object subtract(Object o1, Object o2)
+   public static Double subtract(Object o1, Object o2)
    {
-      if ((o1 == null) && (o2 == null))
-         return null;
-
-      if ((o1 == null) || (o2 == null)){
-         throw new IllegalArgumentException("PSCalculation/subtract exception: null parameter(s)");
-      }
-
-      try{
-         o1 = numberVerify(o1);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/subtract exception: The first parameter is not a number");
-      }
-
-      try{
-         o2 = numberVerify(o2);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/subtract exception: The second parameter is not a number");
-      }
-
-      double result = ((Number)o1).doubleValue() - ((Number)o2).doubleValue();
-      return new Double(result);
+      return performBinaryOperation(o1, o2, (a, b) -> a - b, "subtract");
    }
 
    /**
@@ -164,32 +134,14 @@ public class PSCalculation
     * then a IllegalArgumentException will be thrown. Note: calling numberVerify method
     * in advance is not needed, multiply method does it automatically.
     *
+    * @param o1 first operand
+    * @param o2 second operand
     * @return     the production which is a number related object, or null
     *             if both Obj1 and Obj2 are null
     */
-   public static Object multiply(Object o1, Object o2)
+   public static Double multiply(Object o1, Object o2)
    {
-      if ((o1 == null) && (o2 == null))
-         return null;
-
-      if ((o1 == null) || (o2 == null)){
-         throw new IllegalArgumentException("PSCalculation/multiply exception: null parameter(s)");
-      }
-
-      try{
-         o1 = numberVerify(o1);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/multiply exception: The first parameter is not a number");
-      }
-
-      try{
-         o2 = numberVerify(o2);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/multiply exception: The second parameter is not a number");
-      }
-
-      double result = ((Number)o1).doubleValue() * ((Number)o2).doubleValue();
-      return new Double(result);
+      return performBinaryOperation(o1, o2, (a, b) -> a * b, "multiply");
    }
 
    /**
@@ -199,39 +151,49 @@ public class PSCalculation
     * then a IllegalArgumentException will be thrown. Note: calling numberVerify method
     * in advance is not needed, divide method does it automatically.
     *
+    * @param o1 first operand
+    * @param o2 second operand
     * @return     the division which is a number related object, or null
     *             if both Obj1 and Obj2 are null
     */
-   public static Object divide(Object o1, Object o2)
+   public static Double divide(Object o1, Object o2)
    {
-      if ((o1 == null) && (o2 == null))
+      return performBinaryOperation(o1, o2, (a, b) -> {
+         if (b == 0.0) {
+            throw new ArithmeticException("Division by zero");
+         }
+         return a / b;
+      }, "divide");
+   }
+
+   /**
+    * Helper method to perform binary operations with consistent null handling and error reporting.
+    *
+    * @param o1 first operand
+    * @param o2 second operand
+    * @param operation the operation to perform
+    * @param operationName the name of the operation for error messages
+    * @return the result of the operation or null if both operands are null
+    */
+   private static Double performBinaryOperation(Object o1, Object o2,
+                                               java.util.function.BinaryOperator<Double> operation,
+                                               String operationName)
+   {
+      if (o1 == null && o2 == null) {
          return null;
-
-      int errCode = com.percussion.server.IPSServerErrors.ARGUMENT_ERROR;
-
-      if ((o1 == null) || (o2 == null)){
-         throw new IllegalArgumentException("PSCalculation/divide exception: null parameter(s)");
       }
 
-      try{
-         o1 = numberVerify(o1);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/divide exception: The first parameter is not a number");
+      if (o1 == null || o2 == null) {
+         throw new IllegalArgumentException("PSCalculation/" + operationName + " exception: null parameter(s)");
       }
 
-      try{
-         o2 = numberVerify(o2);
-      } catch (IllegalArgumentException e){
-         throw new IllegalArgumentException("PSCalculation/divide exception: The second parameter is not a number");
+      try {
+         var num1 = numberVerify(o1);
+         var num2 = numberVerify(o2);
+         return operation.apply(num1.doubleValue(), num2.doubleValue());
+      } catch (IllegalArgumentException e) {
+         throw new IllegalArgumentException("PSCalculation/" + operationName + " exception: " + e.getMessage(), e);
       }
-
-      double temp = ((Number)o2).doubleValue();
-      if (temp == 0){
-         throw new IllegalArgumentException("PSCalculation/divide exception: divided by zero");
-      }
-
-      double result = ((Number)o1).doubleValue() / temp;
-      return new Double(result);
    }
 
    /**
@@ -265,33 +227,33 @@ public class PSCalculation
    public static PSDate dateAdjust(Calendar dateOld, int numYear, int numMonth,
                               int numDate, int numHour, int numMin, int numSec)
    {
-      if (dateOld == null)
-         return null;
+      return Optional.ofNullable(dateOld)
+         .map(calendar -> {
+            // Create a copy to avoid modifying the original
+            var workingCalendar = (Calendar) calendar.clone();
 
-      dateOld.add(Calendar.SECOND, numSec);
-      dateOld.add(Calendar.MINUTE, numMin);
-      dateOld.add(Calendar.HOUR_OF_DAY, numHour);   // 24 hour clock
-      dateOld.add(Calendar.DATE, numDate);
-      dateOld.add(Calendar.MONTH, numMonth);
-      dateOld.add(Calendar.YEAR, numYear);
+            workingCalendar.add(Calendar.SECOND, numSec);
+            workingCalendar.add(Calendar.MINUTE, numMin);
+            workingCalendar.add(Calendar.HOUR_OF_DAY, numHour);   // 24 hour clock
+            workingCalendar.add(Calendar.DATE, numDate);
+            workingCalendar.add(Calendar.MONTH, numMonth);
+            workingCalendar.add(Calendar.YEAR, numYear);
 
-      // Note: if you really want to return a Calendar object, then "return dateOld;" here
+            var hr = workingCalendar.get(Calendar.HOUR_OF_DAY);   // 24 hour clock
+            var mi = workingCalendar.get(Calendar.MINUTE);
+            var se = workingCalendar.get(Calendar.SECOND);
 
-      int hr = dateOld.get(Calendar.HOUR_OF_DAY);   // 24 hour clock
-      int mi = dateOld.get(Calendar.MINUTE);
-      int se = dateOld.get(Calendar.SECOND);
+            var da = workingCalendar.get(Calendar.DATE);
+            // Add one to make sure that months are integers from 1 to 12
+            var mo = workingCalendar.get(Calendar.MONTH) + 1;
+            var yr = workingCalendar.get(Calendar.YEAR);
 
-      int da = dateOld.get(Calendar.DATE);
-      // Add one to make sure that months are integers from 1 to 12
-      int mo = dateOld.get(Calendar.MONTH) + 1;
-      int yr = dateOld.get(Calendar.YEAR);
-
-      // Warning: do NOT use Java Calendar's toString() method !!!
-      // Warning: do NOT return Calendar object to prevent from "month" confusion
-      // Warning: do NOT create java.util.Date object by using deprecated
-      // constructors/methods, it is not safe in the long run
-      PSDate newDate = new PSDate(yr, mo, da, hr, mi, se);
-
-      return newDate;
+            // Warning: do NOT use Java Calendar's toString() method !!!
+            // Warning: do NOT return Calendar object to prevent from "month" confusion
+            // Warning: do NOT create java.util.Date object by using deprecated
+            // constructors/methods, it is not safe in the long run
+            return new PSDate(yr, mo, da, hr, mi, se);
+         })
+         .orElse(null);
    }
 }
